--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,16 @@
         android:textAllCaps="false"
         android:textSize="16sp" />
 
+    <Button
+        android:id="@+id/btnConnectionCheck2"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:layout_weight="1"
+        android:text="GET https://www.google.com"
+        android:textAllCaps="false"
+        android:textSize="16sp" />
+
     <TextView
         android:id="@+id/txtStatus"
         android:layout_width="match_parent"
